# Exemplo-weather-API-backend-Python

./: .gitignore  LICENSE  Python Weather API Back-End.postman_collection.json  README.md  pyproject.toml  requirements.txt  vercel.json  weather_api_backend.py
